--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -6,16 +6,16 @@
    "id": "337a233c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:26.580130Z",
-     "iopub.status.busy": "2024-04-24T16:22:26.579396Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.090685Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.089861Z"
+     "iopub.execute_input": "2024-04-25T07:51:16.349751Z",
+     "iopub.status.busy": "2024-04-25T07:51:16.349230Z",
+     "iopub.status.idle": "2024-04-25T07:51:16.884946Z",
+     "shell.execute_reply": "2024-04-25T07:51:16.884218Z"
     },
     "papermill": {
-     "duration": 0.519151,
-     "end_time": "2024-04-24T16:22:27.092835",
+     "duration": 0.547561,
+     "end_time": "2024-04-25T07:51:16.886940",
      "exception": false,
-     "start_time": "2024-04-24T16:22:26.573684",
+     "start_time": "2024-04-25T07:51:16.339379",
      "status": "completed"
     },
     "tags": []
@@ -60,10 +60,10 @@
    "id": "a97299f5",
    "metadata": {
     "papermill": {
-     "duration": 0.003854,
-     "end_time": "2024-04-24T16:22:27.101043",
+     "duration": 0.004689,
+     "end_time": "2024-04-25T07:51:16.896726",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.097189",
+     "start_time": "2024-04-25T07:51:16.892037",
      "status": "completed"
     },
     "tags": []
@@ -78,17 +78,17 @@
    "id": "e9415fef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:27.109778Z",
-     "iopub.status.busy": "2024-04-24T16:22:27.109465Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.119957Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.119203Z"
+     "iopub.execute_input": "2024-04-25T07:51:16.907449Z",
+     "iopub.status.busy": "2024-04-25T07:51:16.906650Z",
+     "iopub.status.idle": "2024-04-25T07:51:16.917720Z",
+     "shell.execute_reply": "2024-04-25T07:51:16.916947Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.016878,
-     "end_time": "2024-04-24T16:22:27.121661",
+     "duration": 0.018039,
+     "end_time": "2024-04-25T07:51:16.919324",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.104783",
+     "start_time": "2024-04-25T07:51:16.901285",
      "status": "completed"
     },
     "tags": []
@@ -152,10 +152,10 @@
    "id": "f25563dc",
    "metadata": {
     "papermill": {
-     "duration": 0.003781,
-     "end_time": "2024-04-24T16:22:27.129285",
+     "duration": 0.00449,
+     "end_time": "2024-04-25T07:51:16.928519",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.125504",
+     "start_time": "2024-04-25T07:51:16.924029",
      "status": "completed"
     },
     "tags": []
@@ -170,17 +170,17 @@
    "id": "5403a3fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:27.138243Z",
-     "iopub.status.busy": "2024-04-24T16:22:27.137714Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.144571Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.143822Z"
+     "iopub.execute_input": "2024-04-25T07:51:16.939078Z",
+     "iopub.status.busy": "2024-04-25T07:51:16.938515Z",
+     "iopub.status.idle": "2024-04-25T07:51:16.945390Z",
+     "shell.execute_reply": "2024-04-25T07:51:16.944721Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.01318,
-     "end_time": "2024-04-24T16:22:27.146264",
+     "duration": 0.013875,
+     "end_time": "2024-04-25T07:51:16.946999",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.133084",
+     "start_time": "2024-04-25T07:51:16.933124",
      "status": "completed"
     },
     "tags": []
@@ -223,10 +223,10 @@
    "id": "9cb590dd",
    "metadata": {
     "papermill": {
-     "duration": 0.003678,
-     "end_time": "2024-04-24T16:22:27.153709",
+     "duration": 0.00448,
+     "end_time": "2024-04-25T07:51:16.956129",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.150031",
+     "start_time": "2024-04-25T07:51:16.951649",
      "status": "completed"
     },
     "tags": []
@@ -241,17 +241,17 @@
    "id": "d2d8c823",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:27.162564Z",
-     "iopub.status.busy": "2024-04-24T16:22:27.161943Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.168490Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.167752Z"
+     "iopub.execute_input": "2024-04-25T07:51:16.966627Z",
+     "iopub.status.busy": "2024-04-25T07:51:16.965961Z",
+     "iopub.status.idle": "2024-04-25T07:51:16.973029Z",
+     "shell.execute_reply": "2024-04-25T07:51:16.972237Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.012656,
-     "end_time": "2024-04-24T16:22:27.170158",
+     "duration": 0.014013,
+     "end_time": "2024-04-25T07:51:16.974639",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.157502",
+     "start_time": "2024-04-25T07:51:16.960626",
      "status": "completed"
     },
     "tags": []
@@ -282,10 +282,10 @@
    "id": "5ae16de1",
    "metadata": {
     "papermill": {
-     "duration": 0.003745,
-     "end_time": "2024-04-24T16:22:27.177746",
+     "duration": 0.004446,
+     "end_time": "2024-04-25T07:51:16.983696",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.174001",
+     "start_time": "2024-04-25T07:51:16.979250",
      "status": "completed"
     },
     "tags": []
@@ -299,10 +299,10 @@
    "id": "b420e590",
    "metadata": {
     "papermill": {
-     "duration": 0.005211,
-     "end_time": "2024-04-24T16:22:27.193454",
+     "duration": 0.004438,
+     "end_time": "2024-04-25T07:51:16.992723",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.188243",
+     "start_time": "2024-04-25T07:51:16.988285",
      "status": "completed"
     },
     "tags": []
@@ -317,17 +317,17 @@
    "id": "e632458b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:27.220335Z",
-     "iopub.status.busy": "2024-04-24T16:22:27.219728Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.226106Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.225332Z"
+     "iopub.execute_input": "2024-04-25T07:51:17.003097Z",
+     "iopub.status.busy": "2024-04-25T07:51:17.002860Z",
+     "iopub.status.idle": "2024-04-25T07:51:17.007844Z",
+     "shell.execute_reply": "2024-04-25T07:51:17.007186Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.029971,
-     "end_time": "2024-04-24T16:22:27.228515",
+     "duration": 0.012074,
+     "end_time": "2024-04-25T07:51:17.009517",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.198544",
+     "start_time": "2024-04-25T07:51:16.997443",
      "status": "completed"
     },
     "tags": []
@@ -350,10 +350,10 @@
    "id": "6b67334f",
    "metadata": {
     "papermill": {
-     "duration": 0.006623,
-     "end_time": "2024-04-24T16:22:27.241564",
+     "duration": 0.004553,
+     "end_time": "2024-04-25T07:51:17.019944",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.234941",
+     "start_time": "2024-04-25T07:51:17.015391",
      "status": "completed"
     },
     "tags": []
@@ -368,17 +368,17 @@
    "id": "a165d425",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:27.257757Z",
-     "iopub.status.busy": "2024-04-24T16:22:27.257349Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.271074Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.270110Z"
+     "iopub.execute_input": "2024-04-25T07:51:17.030375Z",
+     "iopub.status.busy": "2024-04-25T07:51:17.030142Z",
+     "iopub.status.idle": "2024-04-25T07:51:17.041554Z",
+     "shell.execute_reply": "2024-04-25T07:51:17.040798Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.023806,
-     "end_time": "2024-04-24T16:22:27.272987",
+     "duration": 0.018594,
+     "end_time": "2024-04-25T07:51:17.043239",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.249181",
+     "start_time": "2024-04-25T07:51:17.024645",
      "status": "completed"
     },
     "tags": []
@@ -428,10 +428,10 @@
    "id": "a4263f01",
    "metadata": {
     "papermill": {
-     "duration": 0.008859,
-     "end_time": "2024-04-24T16:22:27.287968",
+     "duration": 0.004644,
+     "end_time": "2024-04-25T07:51:17.053493",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.279109",
+     "start_time": "2024-04-25T07:51:17.048849",
      "status": "completed"
     },
     "tags": []
@@ -446,17 +446,17 @@
    "id": "eb152abe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:27.303566Z",
-     "iopub.status.busy": "2024-04-24T16:22:27.303056Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.318545Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.317653Z"
+     "iopub.execute_input": "2024-04-25T07:51:17.064742Z",
+     "iopub.status.busy": "2024-04-25T07:51:17.064126Z",
+     "iopub.status.idle": "2024-04-25T07:51:17.076230Z",
+     "shell.execute_reply": "2024-04-25T07:51:17.075480Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.02588,
-     "end_time": "2024-04-24T16:22:27.320854",
+     "duration": 0.019783,
+     "end_time": "2024-04-25T07:51:17.078017",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.294974",
+     "start_time": "2024-04-25T07:51:17.058234",
      "status": "completed"
     },
     "tags": []
@@ -518,10 +518,10 @@
    "id": "ca3a0889",
    "metadata": {
     "papermill": {
-     "duration": 0.029168,
-     "end_time": "2024-04-24T16:22:27.358191",
+     "duration": 0.004519,
+     "end_time": "2024-04-25T07:51:17.088357",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.329023",
+     "start_time": "2024-04-25T07:51:17.083838",
      "status": "completed"
     },
     "tags": []
@@ -536,16 +536,17 @@
    "id": "bdeaef7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T16:22:27.476044Z",
-     "iopub.status.busy": "2024-04-24T16:22:27.475360Z",
-     "iopub.status.idle": "2024-04-24T16:22:27.483846Z",
-     "shell.execute_reply": "2024-04-24T16:22:27.483051Z"
+     "iopub.execute_input": "2024-04-25T07:51:17.098859Z",
+     "iopub.status.busy": "2024-04-25T07:51:17.098191Z",
+     "iopub.status.idle": "2024-04-25T07:51:17.106542Z",
+     "shell.execute_reply": "2024-04-25T07:51:17.105918Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.016355,
-     "end_time": "2024-04-24T16:22:27.486084",
+     "duration": 0.015715,
+     "end_time": "2024-04-25T07:51:17.108629",
      "exception": false,
-     "start_time": "2024-04-24T16:22:27.469729",
+     "start_time": "2024-04-25T07:51:17.092914",
      "status": "completed"
     },
     "tags": []
@@ -587,6 +588,194 @@
     "assert canFinish(2, [[1,0]]) == True\n",
     "assert canFinish(2, [[1,0],[0,1]]) == False"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2113dbd0",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004644,
+     "end_time": "2024-04-25T07:51:17.118232",
+     "exception": false,
+     "start_time": "2024-04-25T07:51:17.113588",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "Shortest path in undirected graph with unit weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "de8ecf19",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-25T07:51:17.128696Z",
+     "iopub.status.busy": "2024-04-25T07:51:17.128148Z",
+     "iopub.status.idle": "2024-04-25T07:51:17.136580Z",
+     "shell.execute_reply": "2024-04-25T07:51:17.135832Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.015514,
+     "end_time": "2024-04-25T07:51:17.138270",
+     "exception": false,
+     "start_time": "2024-04-25T07:51:17.122756",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def shortestPathUG(n: int, edges: list[tuple[int, int]], src: int) -> list[int]:\n",
+    "    # Create an adj list\n",
+    "    adj: dict[int, list[int]] = dict()\n",
+    "    for n1, n2 in edges:\n",
+    "        n1_neighbours, n2_neighbours = adj.get(n1, []), adj.get(n2, [])\n",
+    "        n1_neighbours.append(n2)\n",
+    "        n2_neighbours.append(n1)\n",
+    "        adj[n1], adj[n2] = n1_neighbours, n2_neighbours\n",
+    "\n",
+    "    shortest: list[int] = [-1 for _ in range(n)]\n",
+    "    heap: list[tuple[int, int]] = [(0, src)]\n",
+    "    while heap:\n",
+    "        curr_dist, curr = heapq.heappop(heap)\n",
+    "        shortest[curr] = curr_dist if shortest[curr] == -1 or shortest[curr] > curr_dist else shortest[curr]\n",
+    "        for next_ in adj.get(curr, []):\n",
+    "            if shortest[next_] == -1 or curr_dist + 1 < shortest[next_]:\n",
+    "                heapq.heappush(heap, (curr_dist + 1, next_))\n",
+    "\n",
+    "    return shortest\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert shortestPathUG(5, [(0, 1), (1, 4), (2, 3), (2, 4), (3, 4)], 1) == [1, 0, 2, 2, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "765658c5",
+   "metadata": {
+    "papermill": {
+     "duration": 0.004701,
+     "end_time": "2024-04-25T07:51:17.147676",
+     "exception": false,
+     "start_time": "2024-04-25T07:51:17.142975",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "Shortest path in DAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c7e19951",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-25T07:51:17.158688Z",
+     "iopub.status.busy": "2024-04-25T07:51:17.157968Z",
+     "iopub.status.idle": "2024-04-25T07:51:17.166843Z",
+     "shell.execute_reply": "2024-04-25T07:51:17.166182Z"
+    },
+    "lines_to_next_cell": 1,
+    "papermill": {
+     "duration": 0.016069,
+     "end_time": "2024-04-25T07:51:17.168562",
+     "exception": false,
+     "start_time": "2024-04-25T07:51:17.152493",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def shortestPathInDAG(N: int, M: int, edges: list[list[int]]) -> list[int]:\n",
+    "    # Create an adj list\n",
+    "    adj: dict[int, list[tuple[int, int]]] = dict()\n",
+    "    for n1, n2, w in edges:\n",
+    "        n1_neighbours = adj.get(n1, [])\n",
+    "        n1_neighbours.append((n2, w))\n",
+    "        adj[n1] = n1_neighbours\n",
+    "\n",
+    "    # Dijkstra's algo!\n",
+    "    shortest: list[int] = [-1 for _ in range(N)]\n",
+    "    heap: list[tuple[int, int]] = [(0, 0)]\n",
+    "    while heap:\n",
+    "        curr_dist, curr = heapq.heappop(heap)\n",
+    "        if shortest[curr] == -1 or curr_dist < shortest[curr]:\n",
+    "            shortest[curr] = curr_dist\n",
+    "            for next_, next_dist in adj.get(curr, []):\n",
+    "                heapq.heappush(heap, (next_dist + curr_dist, next_))\n",
+    "\n",
+    "    return shortest\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert shortestPathInDAG(3, 3, [[0,1,2], [1,2,3], [0,2,6]]) == [0, 2, 5]\n",
+    "assert shortestPathInDAG(3, 3, [[2,0,4],[0,1,3],[2,1,2]]) == [0, 3, -1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36a13aa2",
+   "metadata": {},
+   "source": [
+    "LC Hard: Word Ladder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30ef6d16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/word-ladder/submissions/1241826378\n",
+    "def ladderLengthBrute(beginWord: str, endWord: str, wordList: list[str]) -> int:\n",
+    "    def pathExists(w1: str, w2: str) -> bool:\n",
+    "        N, i = len(w1), 0\n",
+    "        dist = 0\n",
+    "        while i < N:\n",
+    "            if w1[i] != w2[i]:\n",
+    "                dist += 1\n",
+    "            if dist > 1:\n",
+    "                break\n",
+    "            i += 1\n",
+    "\n",
+    "        return dist == 1\n",
+    "\n",
+    "    def BFS(root: str):\n",
+    "        queue: collections.deque = collections.deque([root])\n",
+    "        distances[root] = 0\n",
+    "        while queue:\n",
+    "            curr = queue.popleft()\n",
+    "            for next_ in adj.get(curr, []):\n",
+    "                if next_ not in distances or distances[next_] > distances[curr] + 1:\n",
+    "                    distances[next_] = distances[curr] + 1\n",
+    "                    queue.append(next_)\n",
+    "                    if next_ == endWord:\n",
+    "                        return\n",
+    "\n",
+    "    # Create an adjacency list\n",
+    "    adj: dict[str, list[str]] = dict()\n",
+    "    for w1, w2 in itertools.combinations([beginWord] + wordList, r=2):\n",
+    "        if pathExists(w1, w2):\n",
+    "            w1_neighbours, w2_neighbours = adj.get(w1, []), adj.get(w2, [])\n",
+    "            w1_neighbours.append(w2)\n",
+    "            w2_neighbours.append(w1)\n",
+    "            adj[w1], adj[w2] = w1_neighbours, w2_neighbours\n",
+    "\n",
+    "    distances: dict[str, int] = dict()\n",
+    "    BFS(beginWord)\n",
+    "    return distances[endWord] + 1 if endWord in distances else 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert ladderLengthBrute(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]) == 5\n",
+    "assert ladderLengthBrute(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == 0"
+   ]
   }
  ],
  "metadata": {
@@ -609,14 +798,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2.176455,
-   "end_time": "2024-04-24T16:22:27.707315",
+   "duration": 2.111574,
+   "end_time": "2024-04-25T07:51:17.390474",
    "environment_variables": {},
    "exception": null,
    "input_path": "practice/002.ipynb",
    "output_path": "practice/002.ipynb",
    "parameters": {},
-   "start_time": "2024-04-24T16:22:25.530860",
+   "start_time": "2024-04-25T07:51:15.278900",
    "version": "2.5.0"
   }
  },
