--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -746,6 +746,7 @@
      "iopub.status.idle": "2024-04-25T16:58:37.275488Z",
      "shell.execute_reply": "2024-04-25T16:58:37.274789Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020011,
      "end_time": "2024-04-25T16:58:37.277789",
@@ -799,6 +800,75 @@
     "# Testing the solution\n",
     "assert ladderLengthBrute(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]) == 5\n",
     "assert ladderLengthBrute(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8ca8c27",
+   "metadata": {},
+   "source": [
+    "LC Hard: Word Ladder - 2: https://leetcode.com/problems/word-ladder-ii/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e55a5c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TLE :(\n",
+    "def findLadders(beginWord: str, endWord: str, wordList: list[str]) -> list[list[str]]:\n",
+    "    # BFS traversal to get the list of all shortest prev nodes\n",
+    "    N = len(beginWord)\n",
+    "    wordMap: dict[str, tuple[float, set[str]]] = {word: (math.inf, set()) for word in wordList}\n",
+    "    wordMap[beginWord] = (0, set())\n",
+    "    queue: collections.deque[tuple[str, int, str|None]] = collections.deque([(beginWord, 0, None)])\n",
+    "    while queue:\n",
+    "        curr, dist, prev = queue.popleft()\n",
+    "        for i in range(N):\n",
+    "            for j in range(ord('a'), ord('z') + 1):\n",
+    "                next_ = curr[:i] + chr(j) + curr[i + 1:]\n",
+    "                if next_ in wordMap:\n",
+    "                    next_dist, prevs = wordMap[next_]\n",
+    "                    if dist + 1 < next_dist:\n",
+    "                        prevs = set([curr])\n",
+    "                        next_dist = dist + 1\n",
+    "                        queue.append((next_, dist + 1, curr))\n",
+    "                    elif dist + 1 == next_dist:\n",
+    "                        prevs.add(curr)\n",
+    "                        queue.append((next_, dist + 1, curr))\n",
+    "\n",
+    "                    wordMap[next_] = next_dist, prevs\n",
+    "\n",
+    "    # Reverse the edges\n",
+    "    adj: dict[str, set[str]] = dict()\n",
+    "    for k, v in wordMap.items():\n",
+    "        n1, n1_neighbours = k, v[1]\n",
+    "        for n2 in n1_neighbours:\n",
+    "            n2_neighbours = adj.get(n2, set())\n",
+    "            n2_neighbours.add(n1)\n",
+    "            adj[n2] = n2_neighbours\n",
+    "\n",
+    "    # Do any traversal to get the final result\n",
+    "    results: list[list[str]] = []\n",
+    "    def DFS(root: str, paths: list[str]):\n",
+    "        paths.append(root)\n",
+    "        if root == endWord:\n",
+    "            results.append(list(paths))\n",
+    "        else:\n",
+    "            for next_ in adj.get(root, set()):\n",
+    "                DFS(next_, paths)\n",
+    "        paths.pop()\n",
+    "\n",
+    "    DFS(beginWord, [])\n",
+    "    return sorted(results)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findLadders(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]) == [['hit', 'hot', 'dot', 'dog', 'cog'], ['hit', 'hot', 'lot', 'log', 'cog']]\n",
+    "assert findLadders(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == []\n",
+    "assert findLadders(\"a\", \"c\", [\"a\", \"b\", \"c\"]) == [[\"a\", \"c\"]]\n",
+    "assert findLadders(\"red\", \"tax\", [\"ted\",\"tex\",\"red\",\"tax\",\"tad\",\"den\",\"rex\",\"pee\"]) == [['red', 'rex', 'tex', 'tax'],['red', 'ted', 'tad', 'tax'],['red', 'ted', 'tex', 'tax']]"
    ]
   }
  ],
