--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -2032,8 +2032,19 @@
     "tags": []
    },
    "source": [
-    "Shortest path in undirected graph with unit weights\n",
-    "Video link: https://youtu.be/C4gxoTaI71U?si=NQRmSQ7skeZnz9V0\n",
+    "Shortest path in undirected graph with unit weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "685cf4ef",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Video link: https://youtu.be/C4gxoTaI71U?si=NQRmSQ7skeZnz9V0\n",
     "def shortestPath(edges: list[list[int]], N: int, M: int, src: int) -> list[int]:\n",
     "    # Create an adjacency list\n",
     "    adj: dict[int, list[int]] = dict()\n",
@@ -2067,9 +2078,56 @@
     "    BFS(src)\n",
     "    return distances\n",
     "\n",
-    "Testing the solution\n",
+    "# Testing the solution\n",
     "assert shortestPath([[0,1],[0,3],[3,4],[4,5],[5,6],[1,2],[2,6],[6,7],[7,8],[6,8]], 9, 10, 0) == [0,1,2,1,2,3,3,4,4]\n",
     "assert shortestPath([[0,0],[1,1],[1,3],[3,0]], 4, 4, 3) == [1,1,-1,0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dee3c9a",
+   "metadata": {},
+   "source": [
+    "Word Ladder - 1: https://leetcode.com/problems/word-ladder/submissions/1242529557\n",
+    "Video Link: https://youtu.be/tRPda0rcf8E?si=IvDpS_6OSFIa-iAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9ed676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ladderLength(beginWord: str, endWord: str, wordList: list[str]) -> int:\n",
+    "    \"\"\"Time: O(N x len(word) * 26), Space: O(len(word))\"\"\"\n",
+    "\n",
+    "    # Compute length of all strings\n",
+    "    N: int = len(beginWord)\n",
+    "\n",
+    "    # Create a hashmap for quick lookups\n",
+    "    wordMap: dict[str, int] = {word: 0 for word in wordList}\n",
+    "    wordMap[beginWord] = 1\n",
+    "\n",
+    "    # BFS to find out the sequence length of transformation\n",
+    "    queue: collections.deque = collections.deque([(beginWord, 1)])\n",
+    "    while queue:\n",
+    "        curr, dist = queue.popleft()\n",
+    "\n",
+    "        # Generate all possible transformations (1 char changes)\n",
+    "        for i in range(N):\n",
+    "            for j in range(ord('a'), ord('z') + 1):\n",
+    "                next_ = curr[:i] + chr(j) + curr[i + 1:]\n",
+    "                if next_ in wordMap and wordMap[next_] == 0:\n",
+    "                    wordMap[next_] = dist + 1\n",
+    "                    queue.append((next_, dist + 1))\n",
+    "\n",
+    "    # endWord may or may not exist, return 0 if not found\n",
+    "    return wordMap.get(endWord, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert ladderLength(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]) == 5\n",
+    "assert ladderLength(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == 0"
    ]
   }
  ],
