--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -830,6 +830,7 @@
      "iopub.status.idle": "2024-04-26T17:34:50.059475Z",
      "shell.execute_reply": "2024-04-26T17:34:50.058784Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.023949,
      "end_time": "2024-04-26T17:34:50.061187",
@@ -893,6 +894,78 @@
     "assert findLadders(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == []\n",
     "assert findLadders(\"a\", \"c\", [\"a\", \"b\", \"c\"]) == [[\"a\", \"c\"]]\n",
     "assert findLadders(\"red\", \"tax\", [\"ted\",\"tex\",\"red\",\"tax\",\"tad\",\"den\",\"rex\",\"pee\"]) == [['red', 'rex', 'tex', 'tax'],['red', 'ted', 'tad', 'tax'],['red', 'ted', 'tex', 'tax']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "034f704f",
+   "metadata": {},
+   "source": [
+    "LC Biweekly contest: 129 (27th Apr 2024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfa6e9e0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1 - Easy\n",
+    "def canMakeSquare(grid: list[list[str]]) -> bool:\n",
+    "    for i, j in [(0, 0), (0, 1), (1, 0), (1, 1)]:\n",
+    "        count = 0\n",
+    "        for x, y in [(0, 0), (0, 1), (1, 0), (1, 1)]:\n",
+    "            i_, j_ = i + x, j + y\n",
+    "            if grid[i_][j_] == \"W\":\n",
+    "                count += 1\n",
+    "        if count != 2:\n",
+    "            return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canMakeSquare([[\"B\",\"W\",\"B\"],[\"B\",\"W\",\"W\"],[\"B\",\"W\",\"W\"]]) == True\n",
+    "assert canMakeSquare([[\"B\",\"W\",\"B\"],[\"W\",\"B\",\"W\"],[\"B\",\"W\",\"B\"]]) == False\n",
+    "assert canMakeSquare([[\"B\",\"B\",\"B\"],[\"B\",\"B\",\"B\"],[\"B\",\"B\",\"B\"]]) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f425f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2 - Medium\n",
+    "def numberOfRightTriangles(grid: list[list[int]]) -> int:\n",
+    "    # Find the dimensions\n",
+    "    M, N = len(grid), len(grid[0])\n",
+    "\n",
+    "    # Precompute the number of 1's row & col wise\n",
+    "    rows = [0 for i in range(M)]\n",
+    "    cols = [0 for i in range(N)]\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if grid[i][j] == 1:\n",
+    "                rows[i] += 1\n",
+    "                cols[j] += 1\n",
+    "\n",
+    "    # Traverse through the grid again. Each time we encounter a 1, count 1's in that row and excluding itself and find the product\n",
+    "    count = 0\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if grid[i][j] == 1:\n",
+    "                count += (rows[i] - 1) * (cols[j] - 1)\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfRightTriangles([[1,0,1],[1,0,0],[1,0,0]]) == 2\n",
+    "assert numberOfRightTriangles([[1,0,0,0],[0,1,0,1],[1,0,0,0]]) == 0\n",
+    "assert numberOfRightTriangles([[0,1,0],[0,1,1],[0,1,0]]) == 2"
    ]
   }
  ],
