--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -99,6 +99,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "24f84e7c",
+   "metadata": {},
+   "source": [
+    "Dijkstra algorithm (Worst case time complexity: O (E log V)):\n",
+    "1. Algorithm to find the shortest distance from source node to all nodes.\n",
+    "2. It doesn't work for graphs with negative weights.\n",
+    "3. Typically used with a priority queue. Can work with queue as well. With Q, it works as a typical BFS (Brute force). With PQ we consider the best path only instead of iterating all edges, we end up pruning non optimal paths.\n",
+    "4. Logic:\n",
+    "```\n",
+    "- Create a vector of distances. Assign src as 0 and remaining nodes as infinite (not yet reached)\n",
+    "- Initialize a min heap <dist, node>. Initially we start at src (0, src).\n",
+    "- Repeat until min heap is exhausted.\n",
+    "  * Pop the smallest out\n",
+    "  * Iterate through all neighbours. If the dist to reach neighbour is smaller than currently known shortest distance, update the shortest dist and add to queue.\n",
+    "- Return the distance vector.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a321425e",
    "metadata": {
     "lines_to_next_cell": 0,
@@ -141,7 +161,8 @@
     "import math\n",
     "import collections\n",
     "import itertools\n",
-    "import typing"
+    "import typing\n",
+    "import heapq"
    ]
   },
   {
@@ -2126,6 +2147,7 @@
      "iopub.status.idle": "2024-04-26T17:34:53.606936Z",
      "shell.execute_reply": "2024-04-26T17:34:53.606090Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.025467,
      "end_time": "2024-04-26T17:34:53.608681",
@@ -2166,6 +2188,274 @@
     "# Testing the solution\n",
     "assert ladderLength(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]) == 5\n",
     "assert ladderLength(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0da149f",
+   "metadata": {},
+   "source": [
+    "Video link: https://youtu.be/DREutrv2XD0?si=SbXR_WrwV0yPkM3t\n",
+    "Word Ladder - 2: https://leetcode.com/problems/word-ladder-ii/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c81ef46",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# TLE :(\n",
+    "def findLaddersBetter(beginWord: str, endWord: str, wordList: list[str]) -> list[list[str]]:\n",
+    "    # Compute the length of words\n",
+    "    N = len(beginWord)\n",
+    "\n",
+    "    # Convert list to set for constant lookup times\n",
+    "    wordSet: set[str] = set(wordList)\n",
+    "\n",
+    "    # Store the results to a list\n",
+    "    results: list[list[str]] = []\n",
+    "\n",
+    "    # Do a DFS traversal, we only remove elements with wordSet of completion of a level\n",
+    "    queue: list[list[str]] = [[beginWord]]\n",
+    "    while queue and wordSet:\n",
+    "        next_queue: list[list[str]] = []\n",
+    "        to_remove: set[str] = set()\n",
+    "        for path in queue:\n",
+    "            curr = path[-1]\n",
+    "            for i in range(N):\n",
+    "                for j in range(ord('a'), ord('z') + 1):\n",
+    "                    next_ = curr[:i] + chr(j) + curr[i + 1:]\n",
+    "                    if next_ in wordSet:\n",
+    "                        path.append(next_)\n",
+    "                        path_ = list(path)\n",
+    "                        next_queue.append(path_)\n",
+    "                        to_remove.add(next_)\n",
+    "                        if next_ == endWord:\n",
+    "                            results.append(path_)\n",
+    "                        path.pop()\n",
+    "\n",
+    "        for next_ in to_remove:\n",
+    "            wordSet.remove(next_)\n",
+    "        queue = next_queue\n",
+    "\n",
+    "    return sorted(results)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findLaddersBetter(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]) == [['hit', 'hot', 'dot', 'dog', 'cog'], ['hit', 'hot', 'lot', 'log', 'cog']]\n",
+    "assert findLaddersBetter(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == []\n",
+    "assert findLaddersBetter(\"a\", \"c\", [\"a\", \"b\", \"c\"]) == [[\"a\", \"c\"]]\n",
+    "assert findLaddersBetter(\"red\", \"tax\", [\"ted\",\"tex\",\"red\",\"tax\",\"tad\",\"den\",\"rex\",\"pee\"]) == [['red', 'rex', 'tex', 'tax'],['red', 'ted', 'tad', 'tax'],['red', 'ted', 'tex', 'tax']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "184290e3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Striver Leetcode optimized: https://leetcode.com/problems/word-ladder-ii/submissions/1242920059\n",
+    "def findLadders(beginWord: str, endWord: str, wordList: list[str]) -> list[list[str]]:\n",
+    "    \"\"\"\n",
+    "    Video link: https://youtu.be/AD4SFl7tu7I?si=koBVo4hgse94Ruvn\n",
+    "\n",
+    "    Step 1: BFS and compute the shortest distance to words.\n",
+    "    Step 2: Backtrack from backwards and only traverse to paths that are curr level - 1.\n",
+    "\n",
+    "    This works better because we are starting backwards and thus the exploration of paths would be minimal.\n",
+    "    Further more we only take up paths which are one level below not more not less.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N = len(beginWord)\n",
+    "\n",
+    "    # Store the shortest distances to reach word\n",
+    "    distances: dict[str, float] = {word: math.inf for word in wordList}\n",
+    "    distances[beginWord] = 0\n",
+    "\n",
+    "    # BFS traversal\n",
+    "    queue: collections.deque = collections.deque([beginWord])\n",
+    "    while queue:\n",
+    "        curr = queue.popleft()\n",
+    "        for i in range(N):\n",
+    "            for j in range(ord('a'), ord('z') + 1):\n",
+    "                next_ = curr[:i] + chr(j) + curr[i + 1:]\n",
+    "                if next_ in distances and distances[curr] + 1 < distances[next_]:\n",
+    "                    distances[next_] = distances[curr] + 1\n",
+    "                    queue.append(next_)\n",
+    "\n",
+    "    # Backtrack and find the shortest paths with DFS\n",
+    "    results: list[list[str]] = []\n",
+    "    def DFS(root: str, paths: list[str]):\n",
+    "        if root not in distances or math.isinf(distances[root]):\n",
+    "            return\n",
+    "        elif root == beginWord:\n",
+    "            results.append(paths)\n",
+    "            return\n",
+    "        else:\n",
+    "            for i in range(N):\n",
+    "                for j in range(ord('a'), ord('z') + 1):\n",
+    "                    next_ = root[:i] + chr(j) + root[i + 1:]\n",
+    "                    if distances.get(next_, -1) == distances[root] - 1:\n",
+    "                        DFS(next_, [next_, *paths])\n",
+    "\n",
+    "    DFS(endWord, [endWord])\n",
+    "    return sorted(results)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findLadders(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"]) == [['hit', 'hot', 'dot', 'dog', 'cog'], ['hit', 'hot', 'lot', 'log', 'cog']]\n",
+    "assert findLadders(\"hit\", \"cog\", [\"hot\",\"dot\",\"dog\",\"lot\",\"log\"]) == []\n",
+    "assert findLadders(\"a\", \"c\", [\"a\", \"b\", \"c\"]) == [[\"a\", \"c\"]]\n",
+    "assert findLadders(\"red\", \"tax\", [\"ted\",\"tex\",\"red\",\"tax\",\"tad\",\"den\",\"rex\",\"pee\"]) == [['red', 'rex', 'tex', 'tax'],['red', 'ted', 'tad', 'tax'],['red', 'ted', 'tex', 'tax']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac91aeb8",
+   "metadata": {},
+   "source": [
+    "Dijkstra's Algorithm using Min Heap: https://youtu.be/V6H1qAeB-l4?si=rEGFRGwu-ojsYp-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9b1c99b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def dijkstra(V: int, adj: list[list[list[int]]], src: int):\n",
+    "    # Number of vertices\n",
+    "    N = len(adj)\n",
+    "\n",
+    "    # Store all the distances into an array\n",
+    "    distances: list[int] = [-1 for _ in range(V)]\n",
+    "    distances[src] = 0\n",
+    "\n",
+    "    # Apply Dijkstra\n",
+    "    min_heap: list[tuple[int, int]] = [(0, src)]\n",
+    "    while min_heap:\n",
+    "        curr_dist, curr = heapq.heappop(min_heap)\n",
+    "        for next_, next_dist in adj[curr]:\n",
+    "            if distances[next_] == -1 or distances[next_] > curr_dist + next_dist:\n",
+    "                distances[next_] = curr_dist + next_dist\n",
+    "                heapq.heappush(min_heap, (curr_dist + next_dist, next_))\n",
+    "\n",
+    "    return distances\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert dijkstra(2, [[[1, 9]], [[0, 9]]], 0) == [0, 9]\n",
+    "assert dijkstra(3, [[[1, 1], [2, 6]], [[2, 3], [0, 1]], [[1, 3], [0, 6]]], 2) == [4, 3, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ef6f6db",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/rp1SMw7HSO8?si=7d4Jc-1NTMcKvbh8\n",
+    "Shortest path in an undirected weighted graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fc33946",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def shortestPathGFG(V: int, E: int, edges: list[list[int]]) -> list[int]:\n",
+    "    # Convert the edges into an adjacency list\n",
+    "    adj: dict[int, list[tuple[int, int]]] = dict() # n1: (n2, w)\n",
+    "    for n1, n2, w in edges:\n",
+    "        n1_neighbours, n2_neighbours = adj.get(n1, []), adj.get(n2, [])\n",
+    "        n1_neighbours.append((n2, w))\n",
+    "        n2_neighbours.append((n1, w))\n",
+    "        adj[n1], adj[n2] = n1_neighbours, n2_neighbours\n",
+    "\n",
+    "    # Apply Dijkstra algorithm, store the shortest distances to a hashmap, also store the previous node\n",
+    "    distances: dict[int, tuple[int, int]] = {n1: (-1, -1) for n1 in range(V + 1)} # node: (dist, prev)\n",
+    "    distances[1] = (0, -1)\n",
+    "    heap: list[tuple[int, int]] = [(0, 1)] # dist, node\n",
+    "    while heap:\n",
+    "        curr_dist, curr = heapq.heappop(heap)\n",
+    "        for next_, next_dist in adj.get(curr, []):\n",
+    "            if distances[next_][0] == -1 or distances[next_][0] > curr_dist + next_dist:\n",
+    "                distances[next_] = (curr_dist + next_dist, curr)\n",
+    "                heapq.heappush(heap, (curr_dist + next_dist, next_))\n",
+    "\n",
+    "    dist = distances[V]\n",
+    "    if dist[0] == -1:\n",
+    "        return [-1]\n",
+    "    else:\n",
+    "        result = [V]\n",
+    "        curr = dist[1]\n",
+    "        while curr != -1:\n",
+    "            result.append(curr)\n",
+    "            curr = distances[curr][1]\n",
+    "\n",
+    "        result.append(dist[0])\n",
+    "        result.reverse()\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert shortestPathGFG(5, 6, [[1,2,2], [2,5,5], [2,3,4], [1,4,1],[4,3,3],[3,5,1]]) == [5, 1, 4, 3, 5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6de11f44",
+   "metadata": {},
+   "source": [
+    "Shortest path in a binary maze: https://leetcode.com/problems/shortest-path-in-binary-matrix/submissions/1243256372/\n",
+    "Video Link: https://youtu.be/U5Mw4eyUmw4?si=SM3SONUWEFwd8XLt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f855e08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shortestPathBinaryMatrix(grid: list[list[int]]) -> int:\n",
+    "    \"\"\"\n",
+    "    A priority queue is only needed when we are having weighted graphs.\n",
+    "    Since we have a unit weights, we can use a simple queue.\n",
+    "\n",
+    "    Time: O(N ^ 2), Space: O(N ^ 2)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N = len(grid)\n",
+    "    distances: list[list[float]] = [[math.inf for i in range(N)] for j in range(N)]\n",
+    "    distances[0][0] = 1\n",
+    "    queue: collections.deque[tuple[tuple[int, int], float]] = collections.deque([((0, 0), 1.)])\n",
+    "    while queue:\n",
+    "        curr, dist = queue.popleft()\n",
+    "        for x in range(-1, 2):\n",
+    "            for y in range(-1, 2):\n",
+    "                i, j = curr[0] + x, curr[1] + y\n",
+    "                if 0 <= i < N and 0 <= j < N and grid[i][j] == 0 and distances[i][j] > dist + 1:\n",
+    "                    distances[i][j] = dist + 1\n",
+    "                    queue.append(((i, j), dist + 1))\n",
+    "\n",
+    "    result = distances[N - 1][N - 1]\n",
+    "    return int(result) if grid[0][0] == 0 and not math.isinf(result) else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert shortestPathBinaryMatrix([[0,0,0],[1,1,0],[1,1,0]]) == 4\n",
+    "assert shortestPathBinaryMatrix([[0,1],[1,0]]) == 2\n",
+    "assert shortestPathBinaryMatrix([[1,0,0],[1,1,0],[1,1,0]]) == -1\n",
+    "assert shortestPathBinaryMatrix([[1]]) == -1"
    ]
   }
  ],
