--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -1207,6 +1207,7 @@
      "iopub.status.idle": "2024-04-30T14:51:06.306819Z",
      "shell.execute_reply": "2024-04-30T14:51:06.306192Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.015553,
      "end_time": "2024-04-30T14:51:06.308459",
@@ -1234,6 +1235,89 @@
     "                heapq.heappush(heap, (next_weight, next_))\n",
     "\n",
     "    return mst_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "906ee564",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# LC Easy: Reverse string prefix \n",
+    "# Problem link: https://leetcode.com/problems/reverse-prefix-of-word/submissions/1246431154/\n",
+    "def reversePrefix(word: str, prefix_end: str) -> str:\n",
+    "    result: collections.deque[str] = collections.deque()\n",
+    "    prefixComplete = False\n",
+    "    for ch in word:\n",
+    "        if prefixComplete:\n",
+    "            result.append(ch)\n",
+    "        else:\n",
+    "            result.appendleft(ch)\n",
+    "        if ch == prefix_end:\n",
+    "            prefixComplete = True\n",
+    "\n",
+    "    if not prefixComplete:\n",
+    "        result.reverse()\n",
+    "\n",
+    "    return ''.join(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert reversePrefix(\"abcdefd\", \"d\") == \"dcbaefd\"\n",
+    "assert reversePrefix(\"xyxzxe\", \"z\") == \"zxyxxe\"\n",
+    "assert reversePrefix(\"abcd\", \"z\") == \"abcd\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "648737e9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# LC Easy: count-of-matches-in-tournament/\n",
+    "# Problem Link: https://leetcode.com/problems/count-of-matches-in-tournament\n",
+    "def numberOfMatches(n: int) -> int:\n",
+    "    # Simply return n - 1\n",
+    "    half = n // 2\n",
+    "    if n == 1:\n",
+    "        return half\n",
+    "    else:\n",
+    "        return half + (numberOfMatches(half + 1) if n % 2 else numberOfMatches(half))\n",
+    "\n",
+    "for i in range(1, 201):\n",
+    "    assert numberOfMatches(i) == i - 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4299d8c5",
+   "metadata": {},
+   "source": [
+    "Codechef Weekly contest: 1st May 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab5de96b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def alien_or() -> None:\n",
+    "    T = int(input())\n",
+    "    for t in range(T):\n",
+    "        N, K = map(int, input().split())\n",
+    "        set_: set[int] = {1 << i for i in range(K)}\n",
+    "        for n in range(N):\n",
+    "            inp = int(input(), 2)\n",
+    "            if inp in set_:\n",
+    "                set_.remove(inp)\n",
+    "        print(\"YES\" if not set_ else \"NO\")"
    ]
   }
  ],
