--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -3518,6 +3518,7 @@
      "iopub.status.idle": "2024-04-30T14:51:12.165685Z",
      "shell.execute_reply": "2024-04-30T14:51:12.164897Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.029826,
      "end_time": "2024-04-30T14:51:12.167416",
@@ -3547,6 +3548,70 @@
     "# Testing the solution\n",
     "assert numProvinces([[1, 0, 1], [0, 1, 0], [1, 0, 1]], 3) == 2\n",
     "assert numProvinces([[1, 1], [1, 1]], 2) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dc02bdf",
+   "metadata": {},
+   "source": [
+    "Number of operations to make network connected - DSU\n",
+    "Video Link: https://youtu.be/FYrl7iz9_ZU?si=SctG8sU5N_L_FYUt\n",
+    "Problem link: https://leetcode.com/problems/number-of-operations-to-make-network-connected/submissions/1246593300"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5d00525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeConnected(N: int, connections: list[list[int]]) -> int:\n",
+    "    # Create a disjoint set and create edges such that there is only one ultimate parent\n",
+    "    class DS:\n",
+    "        def __init__(self, V: int):\n",
+    "            self.parents = [i for i in range(V)]\n",
+    "            self.size = [1 for i in range(V)]\n",
+    "\n",
+    "        def findUltimateParent(self, node: int) -> int:\n",
+    "            if self.parents[node] == node:\n",
+    "                return node\n",
+    "            else:\n",
+    "                self.parents[node] = self.findUltimateParent(self.parents[node])\n",
+    "                return self.parents[node]\n",
+    "\n",
+    "        def unionBySize(self, u: int, v: int):\n",
+    "            up, vp = self.findUltimateParent(u), self.findUltimateParent(v)\n",
+    "            if up == vp:\n",
+    "                return\n",
+    "            elif self.size[up] < self.size[vp]:\n",
+    "                self.parents[up] = vp\n",
+    "                self.size[vp] += self.size[up]\n",
+    "            else:\n",
+    "                self.parents[vp] = up\n",
+    "                self.size[up] += self.size[vp]\n",
+    "\n",
+    "    ds = DS(N)\n",
+    "    extra_connections = 0\n",
+    "    for n1, n2 in connections:\n",
+    "        if ds.findUltimateParent(n1) == ds.findUltimateParent(n2):\n",
+    "            extra_connections += 1\n",
+    "        else:\n",
+    "            ds.unionBySize(n1, n2)\n",
+    "\n",
+    "    # Find the number of components\n",
+    "    components = set()\n",
+    "    for node in range(N):\n",
+    "        components.add(ds.findUltimateParent(node))\n",
+    "\n",
+    "    result = len(components) - 1\n",
+    "    return result if result <= extra_connections else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert makeConnected(4, [[0,1],[0,2],[1,2]]) == 1\n",
+    "assert makeConnected(6, [[0,1],[0,2],[0,3],[1,2],[1,3]]) == 2\n",
+    "assert makeConnected(6, [[0,1],[0,2],[0,3],[1,2]]) == -1"
    ]
   }
  ],
